# rest-api

./: .env  .gitignore  Cargo.toml  README  README.md
migrations/2020-09-22-122248_create_posts/: up.sql
src/: config.rs  database.rs  json.rs  main.rs  routes.rs  server.rs
src/handlers/: health.rs  mod.rs  post.rs
src/models/: mod.rs  post.rs
