[package]
name = "rest-api"
version = "0.1.0"
authors = ["Elton Zheng <elton.zheng.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
env_logger = "0.7"
openssl = { version = "0.10", features = ["v110"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
envy = "0.4"
lazy_static = "1.4"
diesel = { version = "1.4.5", features = ["mysql","r2d2","serde_json"] }
r2d2 = "0.8"
r2d2-diesel = "1.0.0"